# 1taskPromProg

./: README.md
messenger-webhook/: index.js
promprog1task/: CMakeLists.txt
promprog1task/A/: preparing.py
promprog1task/B/: CmakeLists.txt  lib.cpp  lib.h
promprog1task/C/: main.cpp
